# fiftyone-skills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: tests.yml
code-style/: plugin.json
code-style/skills/fiftyone-code-style/: SKILL.md
commands/: help.md  quickstart.md
dataset-export/: plugin.json
dataset-export/skills/fiftyone-dataset-export/: SKILL.md
dataset-import/skills/fiftyone-dataset-import/: SKILL.md
develop-plugin/: plugin.json
develop-plugin/skills/fiftyone-develop-plugin/: JAVASCRIPT-PANEL.md  PYTHON-OPERATOR.md  PYTHON-PANEL.md  SKILL.md
find-duplicates/skills/fiftyone-find-duplicates/: SKILL.md
pr-triage/: plugin.json
pr-triage/skills/fiftyone-pr-triage/: SKILL.md
skills/fiftyone-dataset-curation/: SKILL.md
skills/fiftyone-dataset-import/: SKILL.md
skills/fiftyone-dataset-inference/: SKILL.md
skills/fiftyone-dataset-labels/: SKILL.md
skills/fiftyone-develop-modal-panel/: SKILL.md
skills/fiftyone-develop-plugin/: EXECUTION-STORE.md  HYBRID-PLUGINS.md  JAVASCRIPT-PANEL.md  PYTHON-OPERATOR.md  PYTHON-PANEL.md  QUICK-REFERENCE.md  SKILL.md  TROUBLESHOOTING.md
skills/fiftyone-eval-plugin/: SKILL.md
skills/fiftyone-voodo-design/: SKILL.md
skills/fiftyone-zoo-remote-model/: SKILL.md
skills/fiftyone-zoo-remote-model/references/: DATALOADER.md  LABEL-TYPES.md  MANIFEST.md  MODEL-CLASS.md
skills/fiftyone-zoo-remote-model/template/: zoo.py
src/fiftyone_skills/: README.md  __init__.py
tests/: conftest.py  test_fiftyone_skills.py
